--- a/ACS111106_ex1.ipynb
+++ b/ACS111106_ex1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj5obWFbD8OkE4bcfgMo1h",
+      "authorship_tag": "ABX9TyPItZf6fs+byMRO+IxINg46",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,87 +29,233 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import classification_report, accuracy_score, precision_score, recall_score, f1_score\n",
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.metrics import silhouette_score\n",
+        "from google.colab import drive"
       ],
+      "metadata": {
+        "id": "RyiCJTaroZ0y"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RyiCJTaroZ0y",
-        "outputId": "222ee770-2248-4061-9162-08a2c7fea416"
+        "id": "G-F8oRySYTGX",
+        "outputId": "60d5cb67-4072-471e-9ef9-cbca5c114cd8"
       },
-      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ],
+      "source": [
+        "drive.mount('/content/drive')\n",
+        "path = \"/content/drive/MyDrive/creditcard.csv\"\n",
+        "data = pd.read_csv(path)\n",
+        "data['Class'] = data['Class'].astype(int)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = data.drop(['Time'], axis=1)\n",
+        "data['Amount'] = StandardScaler().fit_transform(data['Amount'].values.reshape(-1, 1))\n",
+        "\n",
+        "fraud = data[data['Class'] == 1]\n",
+        "nonfraud = data[data['Class'] == 0]\n",
+        "\n",
+        "print(f'Fraudulent: {len(fraud)}, non-fraudulent: {len(nonfraud)}')\n",
+        "print(f'The positive class (frauds) percentage: {len(fraud)/(len(data))*100:.3f}%')\n",
+        "\n",
+        "X = data.drop(columns=['Class']).values\n",
+        "Y = data['Class'].values\n",
+        "\n",
+        "TEST_SIZE = 0.3\n",
+        "RANDOM_SEED = 42\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=Y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aqsUsZONvlSI",
+        "outputId": "b7b3e08e-45f1-4014-b5d9-d4d3598c14ff"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fraudulent: 492, non-fraudulent: 284315\n",
+            "The positive class (frauds) percentage: 0.173%\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "source": [
+        "rf_model = RandomForestClassifier(\n",
+        "    n_estimators=300,\n",
+        "    max_depth=10,\n",
+        "    min_samples_split=10,\n",
+        "    min_samples_leaf=4,\n",
+        "    class_weight='balanced',\n",
+        "    random_state=RANDOM_SEED\n",
+        ")\n",
+        "rf_model.fit(X_train, y_train)\n",
+        "\n",
+        "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
+        "    accuracy = accuracy_score(y_true, y_pred)\n",
+        "    precision = precision_score(y_true, y_pred)\n",
+        "    recall = recall_score(y_true, y_pred)\n",
+        "    f1 = f1_score(y_true, y_pred)\n",
+        "\n",
+        "    print(f'\\n{model_name} Evaluation:')\n",
+        "    print('===' * 15)\n",
+        "    print('         Accuracy:', accuracy)\n",
+        "    print('  Precision Score:', precision)\n",
+        "    print('     Recall Score:', recall)\n",
+        "    print('         F1 Score:', f1)\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(classification_report(y_true, y_pred))\n",
+        "\n",
+        "y_pred = rf_model.predict(X_test)\n",
+        "evaluation(y_test, y_pred, \"Random Forest (Supervised)\")\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "G-F8oRySYTGX",
-        "outputId": "bd301205-d896-4468-ddf5-b8d012d7deb5"
+        "id": "6tEq_Cd8vlLY",
+        "outputId": "6705aad4-9730-462b-d1db-3df9d046731b"
       },
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Class\n",
-            "0    284315\n",
-            "1       492\n",
-            "Name: count, dtype: int64\n",
-            "[[85133    16]\n",
-            " [    0 85440]]\n",
+            "\n",
+            "Random Forest (Supervised) Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9992743700478681\n",
+            "  Precision Score: 0.7986111111111112\n",
+            "     Recall Score: 0.777027027027027\n",
+            "         F1 Score: 0.7876712328767124\n",
+            "\n",
+            "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       1.00      1.00      1.00     85149\n",
-            "           1       1.00      1.00      1.00     85440\n",
+            "           0       1.00      1.00      1.00     85295\n",
+            "           1       0.80      0.78      0.79       148\n",
             "\n",
-            "    accuracy                           1.00    170589\n",
-            "   macro avg       1.00      1.00      1.00    170589\n",
-            "weighted avg       1.00      1.00      1.00    170589\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.90      0.89      0.89     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
             "\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
-        "from imblearn.over_sampling import SMOTE\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "# 讀取資料\n",
-        "url = \"https://www.kaggle.com/datasets/mlg-ulb/creditcardfraud/download?datasetVersionNumber=1\"\n",
-        "df = pd.read_csv('/content/drive/MyDrive/creditcard.csv')\n",
-        "print(df['Class'].value_counts())\n",
-        "# 特徵縮放\n",
         "scaler = StandardScaler()\n",
-        "df['Amount'] = scaler.fit_transform(df[['Amount']])\n",
-        "df['Time'] = scaler.fit_transform(df[['Time']])\n",
-        "# 分割資料\n",
-        "X = df.drop('Class', axis=1)\n",
-        "y = df['Class']\n",
-        "X_resampled, y_resampled = SMOTE().fit_resample(X, y)\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
-        "# 模型訓練\n",
-        "clf = RandomForestClassifier()\n",
-        "clf.fit(X_train, y_train)\n",
-        "# 預測與評估\n",
-        "y_pred = clf.predict(X_test)\n",
-        "print(confusion_matrix(y_test, y_pred))\n",
-        "print(classification_report(y_test, y_pred))"
+        "x_train = scaler.fit_transform(X_train)\n",
+        "x_test = scaler.transform(X_test)\n",
+        "n_x_train = x_train[y_train == 0][:3000]\n",
+        "\n",
+        "scores = []\n",
+        "for k in range(2, 10):\n",
+        "    kmeans = KMeans(n_clusters=k, init='k-means++', random_state=RANDOM_SEED)\n",
+        "    kmeans.fit(n_x_train)\n",
+        "    score = silhouette_score(n_x_train, kmeans.labels_)\n",
+        "    scores.append(score)\n",
+        "\n",
+        "optimal_k = np.argmax(scores) + 2\n",
+        "kmeans = KMeans(n_clusters=optimal_k, init='k-means++', random_state=RANDOM_SEED)\n",
+        "kmeans.fit(n_x_train)\n",
+        "y_pred_test = kmeans.predict(x_test)\n",
+        "\n",
+        "def align_labels(y_true, y_pred, n_clusters):\n",
+        "    labels = np.zeros_like(y_pred)\n",
+        "    for i in range(n_clusters):\n",
+        "        mask = (y_pred == i)\n",
+        "        if np.sum(mask) > 0:\n",
+        "            labels[mask] = np.bincount(y_true[mask]).argmax()\n",
+        "        else:\n",
+        "            labels[mask] = 0\n",
+        "    return labels\n",
+        "\n",
+        "y_pred_aligned = align_labels(y_test, y_pred_test, optimal_k)\n",
+        "evaluation(y_test, y_pred_aligned, model_name=\"KMeans (Unsupervised)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DLVeikW7AS0H",
+        "outputId": "7be07052-40e9-4287-9540-8e4acd7f2836"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "KMeans (Unsupervised) Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9982678510820079\n",
+            "  Precision Score: 0.0\n",
+            "     Recall Score: 0.0\n",
+            "         F1 Score: 0.0\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85295\n",
+            "           1       0.00      0.00      0.00       148\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.50      0.50      0.50     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+            "/usr/local/lib/python3.11/dist-packages/sklearn/metrics/_classification.py:1565: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+          ]
+        }
       ]
     }
   ]
