--- a/NTCU_ML_Challenge1.ipynb
+++ b/NTCU_ML_Challenge1.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ChienIKao/NTCU-Machine-Learning/blob/assignment-acs110126/NTCU_ML_Challenge1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -95,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBTR4FUN7dTM",
-        "outputId": "81ca067b-fa55-419b-ee49-82e308083709"
+        "outputId": "f7ee69b9-5e4f-4d5c-db6a-8b5ee657ecde"
       },
       "execution_count": 3,
       "outputs": [
@@ -134,10 +145,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 135
+          "height": 136
         },
         "id": "8avvmtSO7szn",
-        "outputId": "d08a698d-39e0-4d28-f877-fb70097010b5"
+        "outputId": "aebcd641-5760-4029-fde4-6d1abc7a9e67"
       },
       "execution_count": 4,
       "outputs": [
@@ -609,21 +620,40 @@
         "\n",
         "# predict and print result\n",
         "y_pred = rf_model.predict(X_test)\n",
-        "print(classification_report(y_test, y_pred))"
+        "# print(classification_report(y_test, y_pred))\n",
+        "evaluation(y_test, y_pred, model_name=\"Random Forest(Supervised)\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FtFnNrdm8FYr",
-        "outputId": "fd1b0dd7-9cb9-4781-88e1-3378e045627d"
+        "outputId": "662fc3a2-50cd-449e-af60-239ff7326519"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.94      0.82      0.88       136\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.97      0.91      0.94     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n",
+            "\n",
+            "Random Forest(Supervised) Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9996371850239341\n",
+            "  Precision Score: 0.9411764705882353\n",
+            "     Recall Score: 0.8235294117647058\n",
+            "         F1 Score: 0.8784313725490196\n",
+            "\n",
+            "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     85307\n",
@@ -692,7 +722,7 @@
       "metadata": {
         "id": "NhOX-eo98M0R"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -731,7 +761,7 @@
         "id": "Od_eP3Da8p3Q",
         "outputId": "8e822ff6-d803-4fb5-e377-90c7852c6a18"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
