--- a/ACS111115_ex1/ex1.ipynb
+++ b/ACS111115_ex1/ex1.ipynb
@@ -17,47 +17,61 @@
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import classification_report, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
         "from sklearn.cluster import KMeans\n",
-        "from sklearn.metrics import silhouette_score, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+        "from sklearn.metrics import silhouette_score\n",
         "import kagglehub\n",
         "\n",
+        "# 一般參數設定\n",
+        "RANDOM_SEED = 42     # 固定隨機種子，確保每次結果一致\n",
+        "TEST_SIZE = 0.3      # 測試集佔比 30%\n",
         "\n",
-        "# general setting. do not change TEST_SIZE\n",
-        "RANDOM_SEED = 42\n",
-        "TEST_SIZE = 0.3\n",
-        "\n",
-        "# load dataset（from kagglehub）\n",
+        "# 載入 Kaggle 資料集（信用卡詐騙資料）\n",
         "path = kagglehub.dataset_download(\"mlg-ulb/creditcardfraud\")\n",
         "data = pd.read_csv(f\"{path}/creditcard.csv\")\n",
-        "data['Class'] = data['Class'].astype(int)#0 for nonfraud 1 for fraud\n",
         "\n",
-        "# prepare data\n",
-        "data = data.drop(['Time'], axis=1)#去除time去除time\n",
-        "data['Amount'] = StandardScaler().fit_transform(data['Amount'].values.reshape(-1, 1))#標準化\n",
+        "# 將 'Class' 欄位轉為整數（0：正常，1：詐騙）\n",
+        "data['Class'] = data['Class'].astype(int)\n",
         "\n",
+        "# 移除 'Time' 欄位（通常無預測意義）\n",
+        "data = data.drop(['Time'], axis=1)\n",
+        "\n",
+        "# 對 'Amount' 欄位做標準化處理（均值為 0，標準差為 1）\n",
+        "data['Amount'] = StandardScaler().fit_transform(data['Amount'].values.reshape(-1, 1))\n",
+        "\n",
+        "# 顯示正負樣本數量與比例\n",
         "fraud = data[data['Class'] == 1]\n",
         "nonfraud = data[data['Class'] == 0]\n",
         "print(f'Fraudulent:{len(fraud)}, non-fraudulent:{len(nonfraud)}')\n",
         "print(f'the positive class (frauds) percentage: {len(fraud)}/{len(fraud) + len(nonfraud)} ({len(fraud)/(len(fraud) + len(nonfraud))*100:.3f}%)')\n",
         "\n",
-        "X = np.asarray(data.iloc[:, ~data.columns.isin(['Class'])])#選擇非class的值轉成numpy array 且如果原本就是np array時不複製\n",
-        "Y = data['Class'].to_numpy()#最佳化為 Pandas → NumPy 的不複製轉換\n",
+        "# 特徵與標籤準備\n",
+        "# X：所有除了 'Class' 的欄位（轉成 NumPy 陣列）\n",
+        "X = np.asarray(data.iloc[:, ~data.columns.isin(['Class'])])\n",
         "\n",
-        "# split training set and data set\n",
+        "# Y：'Class' 欄位（轉成 NumPy 陣列）\n",
+        "Y = data['Class'].to_numpy()\n",
+        "\n",
+        "# 訓練集 / 測試集 切分\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED)\n",
         "\n",
-        "# build Random Forest model\n",
-        "rf_model = RandomForestClassifier(n_estimators=85\n",
-        "                                  , class_weight='balanced_subsample'\n",
-        "                                  , min_samples_leaf= 2\n",
-        "                                  , oob_score= True\n",
-        "                                  , max_features='sqrt'\n",
-        "                                  , max_depth=25\n",
-        "                                  , random_state=RANDOM_SEED)\n",
+        "# 建立 Random Forest 分類模型\n",
+        "rf_model = RandomForestClassifier(\n",
+        "    n_estimators=85,                 # 使用 85 棵樹進行投票\n",
+        "    class_weight='balanced_subsample',  # 每棵樹針對類別權重調整，幫助學習詐騙樣本\n",
+        "    min_samples_leaf=2,             # 每個葉節點最少 2 筆樣本（可防過擬合）\n",
+        "    min_samples_split=3,            # 每個節點至少 3 筆樣本才能再分裂\n",
+        "    oob_score=True,                 # 啟用 Out-of-Bag 估計\n",
+        "    max_features='sqrt',            # 每棵樹每次分裂只考慮 sqrt(n) 個特徵（通常可提升泛化）\n",
+        "    max_depth=25,                   # 限制樹的最大深度，避免太深過擬合\n",
+        "    random_state=RANDOM_SEED        # 固定隨機種子\n",
+        ")\n",
+        "\n",
+        "# 訓練模型\n",
         "rf_model.fit(X_train, y_train)\n",
         "\n",
-        "# define evaluation function\n",
+        "\n",
+        "# 定義評估函式\n",
         "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
         "    accuracy = accuracy_score(y_true, y_pred)\n",
         "    precision = precision_score(y_true, y_pred)\n",
@@ -73,8 +87,10 @@
         "    print(\"\\nClassification Report:\")\n",
         "    print(classification_report(y_true, y_pred))\n",
         "\n",
-        "# predict and print result\n",
+        "# 模型預測與結果輸出\n",
         "y_pred = rf_model.predict(X_test)\n",
+        "\n",
+        "# 輸出完整報告\n",
         "print(classification_report(y_test, y_pred))\n"
       ],
       "metadata": {
@@ -82,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fWTFRjZR1STr",
-        "outputId": "ca294154-be33-426f-f4f6-2b3779955d63"
+        "outputId": "01c146a5-eaee-4a4b-f2c6-de4e1d6583f7"
       },
-      "execution_count": 1,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +124,6 @@
   ],
   "metadata": {
     "colab": {
-      "name": "歡迎使用 Colab",
       "provenance": []
     },
     "kernelspec": {
