--- a/acs111143_ex1/ex2.ipynb
+++ b/acs111143_ex1/ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "254241ba",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\xgboost\\training.py:183: UserWarning: [14:06:28] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
-      "Parameters: { \"bootstrap\", \"use_label_encoder\" } are not used.\n",
+      "C:\\Users\\USER\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "C:\\Users\\USER\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\xgboost\\training.py:183: UserWarning: [01:35:54] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
      ]
@@ -20,72 +22,89 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from xgboost import XGBClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import classification_report, accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score,\n",
+    "    f1_score, classification_report\n",
+    ")\n",
+    "from xgboost import XGBClassifier\n",
     "import kagglehub\n",
     "\n",
-    "# === General setting ===\n",
+    "# === 1. 基本參數與讀取資料 ===\n",
     "RANDOM_SEED = 42\n",
     "TEST_SIZE = 0.3\n",
     "\n",
-    "# === Load dataset from Kaggle ===\n",
     "path = kagglehub.dataset_download(\"mlg-ulb/creditcardfraud\")\n",
     "data = pd.read_csv(f\"{path}/creditcard.csv\")\n",
-    "data['Class'] = data['Class'].astype(int)\n",
     "\n",
-    "# === Preprocessing ===\n",
+    "data['Class'] = data['Class'].astype(int)\n",
     "data = data.drop(['Time'], axis=1)\n",
     "data['Amount'] = StandardScaler().fit_transform(data['Amount'].values.reshape(-1, 1))\n",
-    "X = np.asarray(data.drop(columns=['Class']))\n",
-    "Y = np.asarray(data['Class'])\n",
     "\n",
-    "# === Split dataset ===\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=Y)\n",
+    "X = data.drop(columns=['Class']).to_numpy()\n",
+    "Y = data['Class'].to_numpy()\n",
     "\n",
-    "# === Train XGBoost model ===\n",
-    "xgb_model = XGBClassifier(\n",
-    "    n_estimators=500,#最好\n",
-    "    max_depth=7, #最好\n",
-    "    learning_rate=0.05,#最好\n",
-    "    subsample=0.8,\n",
-    "    colsample_bytree=1.0,\n",
-    "    scale_pos_weight=5, #最好\n",
-    "    gamma=0.05, #最好\n",
-    "    use_label_encoder=False,\n",
-    "    bootstrap=True,\n",
-    "    eval_metric='logloss',\n",
+    "# === 2. 切分資料集 ===\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=Y\n",
+    ")\n",
+    "\n",
+    "# === 3. 標準化處理 ===\n",
+    "scaler = StandardScaler()\n",
+    "X_train_std = scaler.fit_transform(X_train)\n",
+    "X_test_std = scaler.transform(X_test)\n",
+    "\n",
+    "# === 4. Isolation Forest 異常分數作為額外特徵 ===\n",
+    "iso_forest = IsolationForest(\n",
+    "    n_estimators=300,\n",
+    "    contamination=sum(y_train) / len(y_train),\n",
+    "    max_samples='auto',\n",
     "    random_state=RANDOM_SEED\n",
     ")\n",
-    "xgb_model.fit(X_train, y_train)\n",
+    "iso_forest.fit(X_train_std)\n",
+    "train_anomaly_scores = iso_forest.decision_function(X_train_std).reshape(-1, 1)\n",
+    "test_anomaly_scores = iso_forest.decision_function(X_test_std).reshape(-1, 1)\n",
     "\n",
-    "# === Train Isolation Forest model ===\n",
-    "iso_forest = IsolationForest(\n",
-    "    n_estimators=500,\n",
-    "    max_samples=\"auto\",\n",
-    "    contamination=sum(y_train) / len(y_train),  # roughly fraud ratio\n",
-    "    random_state=RANDOM_SEED,\n",
-    "    bootstrap=True,\n",
+    "# === 5. PCA 特徵抽取（保持足夠變異量，例如 95%）===\n",
+    "pca = PCA(n_components=15, random_state=RANDOM_SEED)\n",
+    "pca.fit(X_train_std)\n",
+    "X_train_pca = pca.transform(X_train_std)\n",
+    "X_test_pca = pca.transform(X_test_std)\n",
+    "\n",
+    "# === 6. 組合所有特徵 ===\n",
+    "X_train_final = np.hstack((X_train_std, train_anomaly_scores, X_train_pca))\n",
+    "X_test_final = np.hstack((X_test_std, test_anomaly_scores, X_test_pca))\n",
+    "\n",
+    "# === 7. 建立 XGBoost 模型（結合測試過的超參數）===\n",
+    "xgb_model = XGBClassifier(\n",
+    "    n_estimators=250,\n",
+    "    max_depth=6,\n",
+    "    learning_rate=0.08,\n",
+    "    subsample=0.8,\n",
+    "    colsample_bytree=1.0,\n",
+    "    scale_pos_weight=15,\n",
+    "    gamma=0.05,\n",
+    "    use_label_encoder=False,\n",
+    "    eval_metric='logloss',\n",
+    "    tree_method='hist',\n",
+    "    random_state=RANDOM_SEED\n",
     ")\n",
-    "iso_forest.fit(X_train)\n",
-    "iso_scores = iso_forest.decision_function(X_test)\n",
-    "iso_pred = iso_forest.predict(X_test)\n",
-    "iso_pred = np.where(iso_pred == -1, 1, 0)  # Anomaly -> 1\n",
     "\n",
-    "# === Combine both models ===\n",
-    "xgb_prob = xgb_model.predict_proba(X_test)[:, 1]\n",
-    "xgb_pred = (xgb_prob > 0.45).astype(int)\n",
+    "xgb_model.fit(X_train_final, y_train)\n",
     "\n",
-    "# Soft voting (weighted average)\n",
-    "combined_score = 0.9 * xgb_prob + 0.1 * (-iso_scores)  # iso_scores 越小越異常\n",
-    "combined_pred = (combined_score > 0.3).astype(int)\n"
+    "# === 8. 自訂閾值進行預測（使用概率）===\n",
+    "y_prob = xgb_model.predict_proba(X_test_final)[:, 1]\n",
+    "threshold = 0.43\n",
+    "y_pred = (y_prob > threshold).astype(int)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "id": "fce77a1d",
    "metadata": {},
    "outputs": [
@@ -96,19 +115,19 @@
       "\n",
       "Combined (XGB + IsoForest) Evaluation:\n",
       "=============================================\n",
-      "         Accuracy: 0.9995669627705019\n",
-      "  Precision Score: 0.937007874015748\n",
+      "         Accuracy: 0.9995435553526912\n",
+      "  Precision Score: 0.9224806201550387\n",
       "     Recall Score: 0.8040540540540541\n",
-      "         F1 Score: 0.8654545454545455\n",
+      "         F1 Score: 0.8592057761732852\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     85295\n",
-      "           1       0.94      0.80      0.87       148\n",
+      "           1       0.92      0.80      0.86       148\n",
       "\n",
       "    accuracy                           1.00     85443\n",
-      "   macro avg       0.97      0.90      0.93     85443\n",
+      "   macro avg       0.96      0.90      0.93     85443\n",
       "weighted avg       1.00      1.00      1.00     85443\n",
       "\n"
      ]
@@ -132,7 +151,31 @@
     "# === Results ===\n",
     "#evaluation(y_test, xgb_pred, model_name=\"XGBoost\")\n",
     "#evaluation(y_test, iso_pred, model_name=\"Isolation Forest\")\n",
-    "evaluation(y_test, combined_pred, model_name=\"Combined (XGB + IsoForest)\")"
+    "evaluation(y_test, y_pred, model_name=\"Combined (XGB + IsoForest)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2dfa97a",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Combined (XGB + IsoForest) Evaluation:\n",
+    "=============================================\n",
+    "         Accuracy: 0.9995435553526912\n",
+    "  Precision Score: 0.936\n",
+    "     Recall Score: 0.7905405405405406\n",
+    "         F1 Score: 0.8571428571428571\n",
+    "\n",
+    "Classification Report:\n",
+    "              precision    recall  f1-score   support\n",
+    "\n",
+    "           0       1.00      1.00      1.00     85295\n",
+    "           1       0.94      0.79      0.86       148\n",
+    "\n",
+    "    accuracy                           1.00     85443\n",
+    "   macro avg       0.97      0.90      0.93     85443\n",
+    "weighted avg       1.00      1.00      1.00     85443\n"
    ]
   }
  ],
