--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -2,24 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "935d2dd7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\1065r\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fraudulent:16, non-fraudulent:9984\n",
-      "the positive class (frauds) percentage: 16/10000 (0.160%)\n",
-      "              precision    recall  f1-score   support\n",
+      "Fraudulent: 492, Non-fraudulent: 284315\n",
+      "Positive class ratio: 0.173%\n",
       "\n",
-      "           0       1.00      1.00      1.00      2993\n",
-      "           1       1.00      0.29      0.44         7\n",
+      "Random Forest Evaluation\n",
+      "=============================================\n",
+      "Accuracy: 0.9996371850239341\n",
+      "Precision: 0.9411764705882353\n",
+      "Recall: 0.8235294117647058\n",
+      "F1 Score: 0.8784313725490196\n",
       "\n",
-      "    accuracy                           1.00      3000\n",
-      "   macro avg       1.00      0.64      0.72      3000\n",
-      "weighted avg       1.00      1.00      1.00      3000\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     85307\n",
+      "           1       0.94      0.82      0.88       136\n",
+      "\n",
+      "    accuracy                           1.00     85443\n",
+      "   macro avg       0.97      0.91      0.94     85443\n",
+      "weighted avg       1.00      1.00      1.00     85443\n",
+      "\n",
+      "\n",
+      "KMeans (k=3) Evaluation\n",
+      "=============================================\n",
+      "Accuracy: 0.9987242957293166\n",
+      "Precision: 0.782608695652174\n",
+      "Recall: 0.36486486486486486\n",
+      "F1 Score: 0.4976958525345622\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00     85295\n",
+      "           1       0.78      0.36      0.50       148\n",
+      "\n",
+      "    accuracy                           1.00     85443\n",
+      "   macro avg       0.89      0.68      0.75     85443\n",
+      "weighted avg       1.00      1.00      1.00     85443\n",
       "\n"
      ]
     }
