feat: submit hw

--- a/Example.ipynb
+++ b/Example.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ChienIKao/NTCU-Machine-Learning/blob/assignment-acs110126/NTCU_ML_Challenge1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -106,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HBTR4FUN7dTM",
-        "outputId": "f7ee69b9-5e4f-4d5c-db6a-8b5ee657ecde"
+        "outputId": "2a3a082b-55f9-4d09-c29b-bdfe576fe7a6"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,6 +127,9 @@
         "# split training set and data set\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=TEST_SIZE, random_state=RANDOM_SEED)\n",
         "\n",
+        "y_train = y_train.ravel()\n",
+        "y_test = y_test.ravel()\n",
+        "\n",
         "# build Random Forest model\n",
         "rf_model = RandomForestClassifier(n_estimators=100, random_state=RANDOM_SEED)\n",
         "rf_model.fit(X_train, y_train)"
@@ -145,21 +137,13 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 80
         },
         "id": "8avvmtSO7szn",
-        "outputId": "aebcd641-5760-4029-fde4-6d1abc7a9e67"
+        "outputId": "db72ccd0-32d3-4118-d3a0-ccbb722e5080"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/sklearn/base.py:1389: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-            "  return fit_method(estimator, *args, **kwargs)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -586,7 +570,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -628,7 +612,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FtFnNrdm8FYr",
-        "outputId": "662fc3a2-50cd-449e-af60-239ff7326519"
+        "outputId": "8157cb28-4bfb-4235-9867-bfcb702ba72e"
       },
       "execution_count": 6,
       "outputs": [
@@ -636,15 +620,6 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "              precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      1.00      1.00     85307\n",
-            "           1       0.94      0.82      0.88       136\n",
-            "\n",
-            "    accuracy                           1.00     85443\n",
-            "   macro avg       0.97      0.91      0.94     85443\n",
-            "weighted avg       1.00      1.00      1.00     85443\n",
-            "\n",
             "\n",
             "Random Forest(Supervised) Evaluation:\n",
             "=============================================\n",
@@ -722,7 +697,7 @@
       "metadata": {
         "id": "NhOX-eo98M0R"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -759,9 +734,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Od_eP3Da8p3Q",
-        "outputId": "8e822ff6-d803-4fb5-e377-90c7852c6a18"
+        "outputId": "9057ea76-0fac-4210-e424-7b0db92af4b2"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
