--- a/ACS111121_ex1.md
+++ b/ACS111121_ex1.md
@@ -1,5 +1,74 @@
 # 信用卡詐欺預測分析：XGBoost 模型應用
 
+# 信用卡詐欺預測分析：監督式學習（XGBoost 模型）
+
+---
+
+## 一、專案簡介
+
+本專案致力於建立一套能有效預測信用卡詐欺行為的系統，透過監督式學習模型 XGBoost，針對具有標記的資料進行分類預測。資料集來自 Kaggle，包含匿名化特徵與實際交易金額與詐欺標記，資料嚴重不平衡（正類樣本極少）。
+
+---
+
+## 二、資料前處理步驟
+
+1. **欄位處理**：移除 `Time` 欄位，避免時間偏見。
+2. **標準化處理**：使用 `StandardScaler` 對 `Amount` 欄位進行標準化。
+3. **資料切分**：以 7:3 比例使用 `train_test_split` 將資料切分為訓練與測試資料。
+
+---
+
+## 三、模型訓練與參數（XGBoost）
+
+
+| 參數名稱           | 說明                                                   |
+| ------------------ | ------------------------------------------------------ |
+| `n_estimators`     | 決策樹數量，影響模型複雜度與訓練時間                   |
+| `learning_rate`    | 每棵樹對預測的貢獻程度，小值增加穩定性但需較長訓練時間 |
+| `max_depth`        | 決策樹的最大深度，避免過擬合                           |
+| `scale_pos_weight` | 權重補償用於類別不平衡（負樣本 / 正樣本）              |
+| `random_state`     | 控制隨機性，保證結果可重現                             |
+
+---
+
+## 四、模型評估指標
+
+* **Accuracy**：總體預測正確率
+* **Precision**：預測為詐欺的資料中有多少是真詐欺
+* **Recall**：實際詐欺中有多少被正確找出（關鍵）
+* **F1 Score**：Precision 與 Recall 的調和平均
+* **Classification Report**：詳細分類表現
+* **Precision-Recall Curve**：圖形化 threshold 調整依據
+
+---
+
+## 五、執行環境與套件
+
+* `pandas`, `numpy`, `scikit-learn`, `xgboost`, `kagglehub`
+
+---
+
+## 六、使用方式
+
+1. 使用 pip 安裝所需套件（建議於 Colab 執行）
+2. 從 Kaggle 自動下載資料集（透過 `kagglehub`）
+3. 執行資料預處理、模型訓練與評估步驟
+4. 可根據應用需求調整 threshold 強化模型召回或精確能力
+
+---
+
+## 七、總結
+
+XGBoost 是處理不平衡分類問題的強大工具，能在標記資料下提供穩定與高效的預測結果。特別在金融詐欺偵測中，其調整權重與精細預測能力對於業界具有實務價值。
+
+---
+
+## 八、參考資料
+
+* XGBoost：[https://xgboost.readthedocs.io/](https://xgboost.readthedocs.io/)
+* Scikit-learn：[https://scikit-learn.org/](https://scikit-learn.org/)
+* Kaggle Dataset：[https://www.kaggle.com/mlg-ulb/creditcardfraud](https://www.kaggle.com/mlg-ulb/creditcardfraud)
+
 ## 專案簡介
 
 本專案致力於建立一個能有效預測信用卡詐欺行為的模型，使用 Kaggle 所提供的資料集進行實作。該資料集真實模擬信用卡交易行為，但包含的詐欺樣本極少，造成正負類別高度不平衡，為模型設計帶來挑戰。
@@ -43,14 +112,15 @@
 
 ## 主要模型參數
 
-| 參數                 | 說明                                                     |
-| -------------------- | -------------------------------------------------------- |
+
+| 參數               | 說明                                                     |
+| ------------------ | -------------------------------------------------------- |
 | `n_estimators`     | 樹的總數，決定模型複雜度與訓練時間                       |
 | `learning_rate`    | 每棵樹對最終預測的貢獻程度，小值增加模型穩定性但訓練較慢 |
 | `max_depth`        | 單棵樹的最大深度，控制過擬合風險                         |
 | `scale_pos_weight` | 正樣本權重比例，用來處理類別不平衡問題                   |
 | `random_state`     | 控制隨機性，確保實驗可重現                               |
-| `eval_metric`      | 設定評估指標，如 `logloss` 或 `auc`                  |
+| `eval_metric`      | 設定評估指標，如`logloss` 或 `auc`                       |
 
 ## 模型評估指標
 
