--- a/ACS111121_ex1.md
+++ b/ACS111121_ex1.md
@@ -1,14 +1,13 @@
-# 信用卡詐欺預測分析：監督與非監督模型整合應用
+# 信用卡詐欺預測分析：監督與非監督模型
 
 ## 專案簡介
 
-本專案旨在透過整合監督式學習（XGBoost）與非監督式學習（KMeans + PCA）方法，建構一套可有效預測與識別信用卡詐欺行為的系統。資料來源為 Kaggle 所提供的真實信用卡交易資料集，特點是極度不平衡的類別分布，其中正常交易遠多於詐欺交易。
+本專案旨在透過監督式學習（XGBoost）與非監督式學習（KMeans + PCA）方法，建構一套可有效預測與識別信用卡詐欺行為的系統。資料來源為 Kaggle 所提供的真實信用卡交易資料集，特點是極度不平衡的類別分布，其中正常交易遠多於詐欺交易。
 
 為解決此問題，專案採用以下策略：
 
 * 利用 XGBoost 進行精準分類並調整門檻優化 Precision 與 Recall
 * 使用 PCA 進行降維與特徵壓縮，搭配 KMeans 做非監督分群探索
-* 最終以混合式投票法結合多次非監督學習結果，提升整體判別能力
 
 ---
 
@@ -94,12 +93,6 @@
 
 * 與監督模型相同：Accuracy、Precision、Recall、F1 Score、Classification Report
 
----
-
-## 混合模型應用建議
-
-* **半監督學習策略**：將非監督模型（如 Isolation Forest、KMeans）所得異常分數當作額外特徵加入 XGBoost 模型中訓練
-* **投票策略整合**：針對相同資料，將監督與非監督模型結果做 soft voting 或 hard voting，提高模型彈性與穩健度
 
 ---
 
@@ -125,9 +118,9 @@ pip install pandas numpy scikit-learn xgboost kagglehub
 
 ## 總結
 
-本專案成功整合監督式與非監督式學習模型，針對高度不平衡的信用卡詐欺資料進行分類與偵測。XGBoost 提供強大的分類準確率與精細門檻控制，而 KMeans + PCA 則可在無標籤場景中進行潛在詐欺樣本探索。
+本專案成功優化監督式與非監督式學習模型，針對高度不平衡的信用卡詐欺資料進行分類與偵測。XGBoost 提供強大的分類準確率與精細門檻控制，而 KMeans + PCA 則可在無標籤場景中進行潛在詐欺樣本探索。
 
-透過模型整合與多次實驗結果分析，本專案展現了在金融領域中有效應對詐欺偵測的應用潛力。
+透過模型優化與多次實驗結果分析，本專案展現了在金融領域中有效應對詐欺偵測的應用潛力。
 
 ---
 
