--- a/acs111851_ex1/ex1.ipynb
+++ b/acs111851_ex1/ex1.ipynb
@@ -73,7 +73,7 @@
         "    gamma=0.2,\n",
         "    subsample=0.9,\n",
         "    colsample_bytree=0.9,\n",
-        "    scale_pos_weight=200,  # 根據你資料比例微調。非越大越好\n",
+        "    scale_pos_weight=200,  # 根據資料比例微調。非越大越好\n",
         "    random_state=RANDOM_SEED,\n",
         "    eval_metric='logloss'\n",
         ")\n",
