--- a/ACS111138_ex2/ex2.ipynb
+++ b/ACS111138_ex2/ex2.ipynb
@@ -156,7 +156,7 @@
     "    max_delta_step=3, tree_method='hist',\n",
     "    scale_pos_weight=len(y_train[y_train == 0]) / len(y_train[y_train == 1]),\n",
     "    objective='binary:logistic', eval_metric='aucpr',\n",
-    "    random_state=RANDOM_SEED, use_label_encoder=False\n",
+    "    random_state=RANDOM_SEED\n",
     ")\n",
     "\n",
     "xgb_model.fit(x_train_all, y_train)\n",
